# internal/api/response/interview.go
@@ -1,0 +1,5 @@
+package response
+
+type CreateInterviewResponse struct {
+	InterviewID string `json:"interviewId"`
+}
